--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: 10;
+      z-index: 9999;
       pointer-events: none;
       transform: rotate(180deg) scaleX(-1);
     }
@@ -98,7 +98,7 @@
       fn main(@builtin(global_invocation_id) gid : vec3<u32>) {
         if (gid.x >= 224u || gid.y >= 224u) { return; }
         let m = mask[gid.y * 224u + gid.x];
-        let color = vec4<f32>(0.0, 0.0, m, m);
+        let color = vec4<f32>(1.0, 0.0, 0.0, m);
         textureStore(outTex, vec2<i32>(gid.xy), color);
       }
     `;
@@ -323,8 +323,8 @@
 
         const tPredictStart = performance.now();
         const mask = tf.tidy(() => {
-          const pred = model.predict(input);
-          return tf.sub(1, pred.squeeze());
+          const pred = model.predict(input).squeeze();
+          return pred.greater(0.5).toFloat();
         });
         await tf.nextFrame();
         const tPredictEnd = performance.now();
