--- a/test.html
+++ b/test.html
@@ -114,6 +114,8 @@
       gl.enableVertexAttribArray(texLoc);
       gl.vertexAttribPointer(texLoc, 2, gl.FLOAT, false, 0, 0);
       gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+      // Ensure the camera frame is fully rendered before it's read back.
+      gl.flush();
       return true;
     }
 
@@ -123,6 +125,9 @@
       @group(0) @binding(1) var<storage, read_write> outBuf : array<f32>;
       @group(0) @binding(2) var samp : sampler;
 
+      // Camera RGB values are already in the [0,1] range expected by the
+      // segmentation network, so we simply pass them through. Performing this
+      // copy in the compute shader keeps all preprocessing on the GPU.
       @compute @workgroup_size(8,8)
       fn main(@builtin(global_invocation_id) gid : vec3<u32>) {
         if (gid.x >= 224u || gid.y >= 224u) { return; }
@@ -205,7 +210,7 @@
     async function preprocess(cameraBitmap) {
       try {
         queue.copyExternalImageToTexture(
-          { source: cameraBitmap },
+          { source: cameraBitmap, flipY: true },
           { texture: cameraTexture },
           [224, 224]
         );
